fix text alignment

--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -186,6 +186,9 @@ p{
   display:flex;
   flex-direction: column;
   align-items: center;
+  p{
+    text-align: center;
+  }
 }
 .article-hide{
   opacity:0;
